# cpp-template

./: .bumpversion.cfg  .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
cmake/config/: CppTemplate.pc.in  CppTemplateConfig.cmake.in
cmake/modules/: FindCppTemplate.cmake
cpp_template/: __init__.py
cpp_template/tests/: test_all.py
src/cpp-template/: cpp-template.cpp  cpp-template.hpp
src/cpp-template/python/: extension.cpp  extension.hpp
